# RaftMotorControl

./: .gitignore  CMakeLists.txt  Layer1_README.md  README.md  library.json
components/MotorControl/: CMakeLists.txt  MotorControl.cpp  MotorControl.h  MotorControlConsts.h  MotorControlMsgFormats.h  MotorControlTypes.h
components/MotorControl/Axes/: AxesPackedBools.h  AxesParamVals.h  AxesParams.h  AxesPosValues.h  AxesPosition.h  AxesState.h  AxesValues.h  AxisEndstopChecks.cpp  AxisEndstopChecks.h  AxisInt32s.h  AxisParams.h  AxisUtils.cpp  AxisUtils.h  AxisValidBools.h  AxisValues.h
components/MotorControl/Controller/: MotionArgs.cpp  MotionArgs.h  MotionBlockManager.cpp  MotionBlockManager.h  MotionControlIF.h  MotionController.cpp  MotionController.h  MotionPlanner.cpp  MotionPlanner.h
components/MotorControl/EndStops/: EndStops.cpp  EndStops.h
components/MotorControl/Geometries/: AxisGeomBase.h  AxisGeomXYZ.cpp  AxisGeomXYZ.h  GeometryManager.h
components/MotorControl/HWElemBase/: HWElemBase.cpp  HWElemBase.h  HWElemMsg.h
components/MotorControl/HWTiming/: HWTimingBase.h
components/MotorControl/Kinematics/: KinematicsSingleArmSCARA.h  KinematicsXYZ.h  RaftKinematics.h  RaftKinematicsSystem.h
components/MotorControl/MotionPatterns/: HomingPattern.cpp  HomingPattern.h  HomingSeekCenter.cpp  HomingSeekCenter.h  MotionPatternBase.h  MotionPatternManager.cpp  MotionPatternManager.h
components/MotorControl/MotorEnabler/: MotorEnabler.h
components/MotorControl/RampGenerator/: MotionBlock.cpp  MotionBlock.h  MotionPipeline.cpp  MotionPipeline.h  MotionPipelineIF.h  MotionRingBuffer.h  RampGenConsts.h  RampGenStats.cpp  RampGenStats.h  RampGenTimer.cpp  RampGenTimer.h  RampGenerator.cpp  RampGenerator.h
components/MotorControl/Steppers/: MotorDriverBase.h  StepDriverBase.cpp  StepDriverBase.h  StepDriverParams.h  StepDriverTMC2209.cpp  StepDriverTMC2209.h  StepDriverTMC2209Enhanced.cpp  StepDriverTMC2209Enhanced.h
components/MotorControl/test/: CMakeLists.txt  HardwareRamp_test.cpp  RampGenTimer_test.cpp  Steppers_RampGen_test.cpp
design/: SCARA_COORDINATE_ANALYSIS.md  scara_kinematics.py
docs/: Bounds_Checking_Improvements.md  MotionArgs_Documentation.md  MotorControl_Binary_Data_Publishing.md  MotorController_State_Publishing_Implementation.md  README.md  Velocity_Mode_Implementation.md  WebSocket_to_MotorControl_Communication.md  api-reference.md  architecture.md  configuration.md  overview.md
examples/DriverStatus/: README.md
examples/DriverStatus/components/DriverStatus/: CMakeLists.txt  DriverStatus.cpp  DriverStatus.h
examples/DriverStatus/main/: main.cpp
examples/DriverStatus/systypes/Common/: features.cmake
examples/DriverStatus/systypes/DriverStatus/: SysTypes.json  sdkconfig.defaults
linux_tests/linux_lib/: CMakeLists.txt  mk_lib.sh
linux_tests/linux_unit_tests/: CMakeLists.txt  README.md  mk.sh  raftkinematicstest.cpp  testAxesDefinition.json
linux_tests/py_linux_tests/: CMakeLists.txt  DeviceConfig.json  TestKinematics_workinprogress.cpp  TestMotorControl.py  build.sh  mk.sh  motor_control_wrapper.cpp
linux_tests/py_visual_test/: PickDotColours.py  TestWithCameraTracking.ipynb
linux_unit_tests/: .gitignore  DeviceConfig.json  Makefile  MotorControlTest.cpp  build.sh  esp_attr.h  raftkinematicstest.cpp  testAxesDefinition.json
plans/: README.md  acceptance-criteria.md  implementation-plan.md  layer-by-layer-guide.md  test-harness-specifications.md
test_rigs/TwoStepperMagRotTestRig/: CMakeLists.txt  README.md
test_rigs/TwoStepperMagRotTestRig/components/MainSysMod/: MainSysMod.cpp  MainSysMod.h
test_rigs/TwoStepperMagRotTestRig/main/: CMakeLists.txt  main.cpp
test_rigs/TwoStepperMagRotTestRig/systypes/Common/: features.cmake
test_rigs/TwoStepperMagRotTestRig/systypes/Common/WebUI/: README.md  package-lock.json  package.json
test_rigs/TwoStepperMagRotTestRig/systypes/Common/WebUI/src/: App.tsx  index.html  styles.css
test_rigs/TwoStepperMagRotTestRig/systypes/Common/WebUI/src/components/: MotorControl.tsx  StatusPanel.tsx
test_rigs/TwoStepperMagRotTestRig/systypes/Common/WebUI/src/types/: SystemTypeTwoStepper.ts
test_rigs/TwoStepperMagRotTestRig/systypes/SysTypeMain/: SysTypes - cartesian.json  SysTypes - sandbot.json  SysTypes.json  partitions.csv  sdkconfig.defaults
test_rigs/WebUI/: .parcelrc  ANGLE_TRACKING.md  README.md  package-lock.json  package.json  tsconfig.json
test_rigs/WebUI/src/: App.tsx  ConnManager.ts  index.tsx  styles.css
test_rigs/WebUI/src/components/: AngleChart.tsx  CartesianVisualization.tsx  ConnectionPanel.tsx  EncoderDisplay.tsx  MotorControl.tsx  MotorControllerConnection.tsx  PathExecutor.tsx  RobotVisualization.tsx  SCARAVisualization.tsx
test_rigs/WebUI/src/types/: SystemTypeTwoStepper.ts
test_rigs/WebUI/src/utils/: RobotGeometry.ts  SensorAngleTracker.ts
tests/: CMakeLists.txt
tests/TestKinematics/: CMakeLists.txt  bindings.cpp  build.sh  test.py  test_kinematics.py
tests/unit/: test_motor_driver_base.cpp
unit_tests/: CMakeLists.txt  Makefile  sdkconfig.defaults
unit_tests/main/: CMakeLists.txt  HardwareRamp_test.cpp  MotorDriverBase_test.cpp  RampGenTimer_test.cpp  Steppers_RampGen_test.cpp  TMC2209Driver_test.cpp  test_main.cpp  xyz_test.cpp
unit_tests/systypes/unittest/: SysTypes.json  features.cmake
