cmake_minimum_required(VERSION 3.16)

idf_component_register(
  SRCS
    "Axes/AxisEndstopChecks.cpp"
    "Axes/AxisUtils.cpp"
    "Controller/MotionArgs.cpp"
    "Controller/MotionBlockManager.cpp"
    "Controller/MotionController.cpp"
    "Controller/MotionPlanner.cpp"
    "EndStops/EndStops.cpp"
    "Geometries/AxisGeomXYZ.cpp"
    "MotorControl.cpp"
    "RampGenerator/MotionBlock.cpp"
    "RampGenerator/MotionPipeline.cpp"
    "RampGenerator/RampGenerator.cpp"
    "RampGenerator/RampGenStats.cpp"
    "RampGenerator/RampGenTimer.cpp"
    "Steppers/StepDriverBase.cpp"
    "Steppers/StepDriverTMC2209.cpp"
  INCLUDE_DIRS
    "."
    "Axes"
    "Controller"
    "EndStops"
    "Geometries"
    "HWTiming"
    "MotorEnabler"
    "RampGenerator"
    "Steppers"
  REQUIRES
    raftcore-src
)
